--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.19.0",
     "connected-react-router": "^6.5.2",
     "history": "^4.10.1",
+    "node-sass": "^4.13.0",
     "qs": "^6.9.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.1",
     "typescript": "3.6.4"
@@ -44,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "@types/history": "^4.7.3"
+    "@types/history": "^4.7.3",
+    "@types/react-router-dom": "^5.1.2",
+    "@types/react-transition-group": "^4.2.3"
   }
 }
