--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "history": "^4.10.1",
     "node-sass": "^4.13.0",
     "qs": "^6.9.0",
+    "rc-queue-anim": "^1.8.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.1",
